tests/ui/async-await/awaiting-unsized-param.stderr
warning: the feature `unsized_locals` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/awaiting-unsized-param.rs:3:31
   |
LL | #![feature(unsized_fn_params, unsized_locals)]
   |                               ^^^^^^^^^^^^^^
   |
   = note: see issue #48055 <https://github.com/rust-lang/rust/issues/48055> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the size for values of type `(dyn Future<Output = T> + Unpin + 'static)` cannot be known at compilation time
  --> $DIR/awaiting-unsized-param.rs:8:17
   |
LL | async fn bug<T>(mut f: dyn Future<Output = T> + Unpin) -> T {
   |                 ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Future<Output = T> + Unpin + 'static)`
   = note: all values captured by value by a closure must have a statically known size

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
